--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -5,11 +5,18 @@
     align-items: center;
     min-height: calc(100vh - /* Adjust for Navbar height if fixed */ 60px); /* Example adjustment */
     padding: 40px;
-    background-color: #000; /* Light grey background */
+     /* Light grey background */
+  }
+
+  .main-home-section {
+    background-color: #000;
   }
   
   .left-section {
     width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;  
   }
   
   .right-section {
